reduce complexity of code