@@ -1,5 +1,7 @@
 package br.com.fiap.techchallenge.repository;
 
+import br.com.fiap.techchallenge.exception.SalvarAvaliacaoException;
+import br.com.fiap.techchallenge.exception.SalvarRelatorioException;
 import br.com.fiap.techchallenge.model.Avaliacao;
 import br.com.fiap.techchallenge.model.RelatorioSemanal;
 import com.azure.data.tables.TableClient;
@@ -14,6 +16,9 @@ import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @ApplicationScoped
@@ -24,40 +29,30 @@ public class StorageTableRepository {
     private static final String TABLE_RELATORIOS = "relatorios";
     private static final String PARTITION_KEY_AVALIACOES = "Java";
     private static final String PARTITION_KEY_RELATORIOS = "Semanal";
+    private static final String FORMAT_STRING = "\"%s\":%d";
 
-    private volatile TableServiceClient tableServiceClient;
+    private final TableServiceClient tableServiceClient;
 
-    private void initialize() {
-        if (tableServiceClient == null) {
-            synchronized (this) {
-                if (tableServiceClient == null) {
-                    LOG.info("Inicializando conexão com Azure Storage Tables");
-                    String connectionString = System.getenv("AzureWebJobsStorage");
-                    if (connectionString == null || connectionString.isBlank()) {
-                        connectionString = System.getenv("AZURE_STORAGE_CONNECTION_STRING");
-                    }
-                    if (connectionString == null || connectionString.isBlank()) {
-                        throw new IllegalStateException("Connection string do Azure Storage não configurada. Defina AzureWebJobsStorage ou AZURE_STORAGE_CONNECTION_STRING.");
-                    }
-                    tableServiceClient = new TableServiceClientBuilder()
-                            .connectionString(connectionString)
-                            .buildClient();
-                    LOG.info("Conexão estabelecida com sucesso");
-                }
-            }
+    public StorageTableRepository() {
+        LOG.info("Inicializando conexão com Azure Storage Tables");
+        String connectionString = System.getenv("AzureWebJobsStorage");
+        if (connectionString == null || connectionString.isBlank()) {
+            connectionString = System.getenv("AZURE_STORAGE_CONNECTION_STRING");
         }
+        if (connectionString == null || connectionString.isBlank()) {
+            throw new IllegalStateException("Connection string do Azure Storage não configurada. Defina AzureWebJobsStorage ou AZURE_STORAGE_CONNECTION_STRING.");
+        }
+        this.tableServiceClient = new TableServiceClientBuilder()
+                .connectionString(connectionString)
+                .buildClient();
+        LOG.info("Conexão estabelecida com sucesso. Verificando tabelas...");
+        criarTabelaAvaliacoes();
+        criarTabelaRelatorios();
     }
 
     public void salvarAvaliacao(Avaliacao avaliacao) {
         try {
-            initialize();
             LOG.infof("Salvando avaliação: %s", avaliacao.getId());
-
-            try {
-                tableServiceClient.createTableIfNotExists(TABLE_AVALIACOES);
-            } catch (Exception e) {
-                LOG.warnf("Tabela %s pode já existir ou erro ao criar: %s", TABLE_AVALIACOES, e.getMessage());
-            }
 
             TableClient tableClient = tableServiceClient.getTableClient(TABLE_AVALIACOES);
             TableEntity entity = new TableEntity(PARTITION_KEY_AVALIACOES, avaliacao.getId())
@@ -70,13 +65,20 @@ public class StorageTableRepository {
             LOG.infof("Avaliação salva com sucesso: %s", avaliacao.getId());
         } catch (Exception e) {
             LOG.errorf("Erro ao salvar avaliação: %s", e.getMessage());
-            throw new RuntimeException("Erro ao salvar avaliação", e);
+            throw new SalvarAvaliacaoException("Erro ao salvar avaliação", e);
+        }
+    }
+
+    private void criarTabelaAvaliacoes() {
+        try {
+            tableServiceClient.createTableIfNotExists(TABLE_AVALIACOES);
+        } catch (Exception e) {
+            LOG.warnf("Tabela %s pode já existir ou erro ao criar: %s", TABLE_AVALIACOES, e.getMessage());
         }
     }
 
     public List<Avaliacao> buscarAvaliacoesPorPeriodo(LocalDateTime inicio, LocalDateTime fim) {
         try {
-            initialize();
             LOG.infof("Buscando avaliações entre %s e %s", inicio, fim);
 
             TableClient tableClient = tableServiceClient.getTableClient(TABLE_AVALIACOES);
@@ -90,7 +92,7 @@ public class StorageTableRepository {
             List<Avaliacao> avaliacoes = tableClient.listEntities(options, null, null)
                     .stream()
                     .map(this::fromTableEntity)
-                    .collect(Collectors.toList());
+                    .toList();
 
             LOG.infof("Total de avaliações encontradas: %d", avaliacoes.size());
             return avaliacoes;
@@ -102,68 +104,102 @@ public class StorageTableRepository {
 
     public void salvarRelatorio(RelatorioSemanal relatorio) {
         try {
-            initialize();
             LOG.infof("Salvando relatório: %s", relatorio.getId());
 
+            TableEntity entity = criarEntityBase(relatorio);
+            adicionarAvaliacoesPorDia(entity, relatorio.getAvaliacoesPorDia());
+            adicionarContagemPorUrgencia(entity, relatorio.getContagemPorUrgencia());
+            adicionarMapaComoJson(entity, "palavrasRecorrentes", relatorio.getPalavrasRecorrentes());
+            adicionarMapaComoJson(entity, "frasesRecorrentes", relatorio.getFrasesRecorrentes());
 
-            try {
-                tableServiceClient.createTableIfNotExists(TABLE_RELATORIOS);
-            } catch (Exception e) {
-                LOG.warnf("Tabela %s pode já existir ou erro ao criar: %s", TABLE_RELATORIOS, e.getMessage());
-            }
-
-            TableClient tableClient = tableServiceClient.getTableClient(TABLE_RELATORIOS);
-            TableEntity entity = new TableEntity(PARTITION_KEY_RELATORIOS, relatorio.getId())
-                    .addProperty("dataGeracao", relatorio.getDataGeracao() != null ? relatorio.getDataGeracao().toString() : LocalDateTime.now().toString())
-                    .addProperty("periodoInicio", relatorio.getPeriodoInicio() != null ? relatorio.getPeriodoInicio().toString() : "")
-                    .addProperty("periodoFim", relatorio.getPeriodoFim() != null ? relatorio.getPeriodoFim().toString() : "")
-                    .addProperty("totalAvaliacoes", relatorio.getTotalAvaliacoes())
-                    .addProperty("mediaNotas", relatorio.getMediaNotas())
-                    .addProperty("notaMaisAlta", relatorio.getNotaMaisAlta() != null ? relatorio.getNotaMaisAlta() : 0)
-                    .addProperty("notaMaisBaixa", relatorio.getNotaMaisBaixa() != null ? relatorio.getNotaMaisBaixa() : 0);
-
-            if (relatorio.getAvaliacoesPorDia() != null) {
-                StringBuilder diasJson = new StringBuilder();
-                relatorio.getAvaliacoesPorDia().forEach((dia, count) -> {
-                    if (diasJson.length() > 0) diasJson.append(",");
-                    diasJson.append(String.format("\"%s\":%d", dia, count));
-                });
-                entity.addProperty("avaliacoesPorDia", "{" + diasJson + "}");
-            }
-
-            if (relatorio.getContagemPorUrgencia() != null) {
-                relatorio.getContagemPorUrgencia().forEach((nivel, count) -> {
-                    entity.addProperty("contagem_" + nivel, count);
-                });
-            }
-
-            if (relatorio.getPalavrasRecorrentes() != null && !relatorio.getPalavrasRecorrentes().isEmpty()) {
-                StringBuilder palavrasJson = new StringBuilder();
-                for (java.util.Map.Entry<String, Long> entry : relatorio.getPalavrasRecorrentes().entrySet()) {
-                    if (palavrasJson.length() > 0) palavrasJson.append(",");
-                    String palavra = entry.getKey() != null ? entry.getKey() : "";
-                    Long count = entry.getValue() != null ? entry.getValue() : 0L;
-                    palavrasJson.append(String.format("\"%s\":%d", palavra.replace("\"", "\\\\\""), count.longValue()));
-                }
-                entity.addProperty("palavrasRecorrentes", "{" + palavrasJson + "}");
-            }
-
-            if (relatorio.getFrasesRecorrentes() != null && !relatorio.getFrasesRecorrentes().isEmpty()) {
-                StringBuilder frasesJson = new StringBuilder();
-                for (java.util.Map.Entry<String, Long> entry : relatorio.getFrasesRecorrentes().entrySet()) {
-                    if (frasesJson.length() > 0) frasesJson.append(",");
-                    String frase = entry.getKey() != null ? entry.getKey() : "";
-                    Long count = entry.getValue() != null ? entry.getValue() : 0L;
-                    frasesJson.append(String.format("\"%s\":%d", frase.replace("\"", "\\\\\""), count.longValue()));
-                }
-                entity.addProperty("frasesRecorrentes", "{" + frasesJson + "}");
-            }
-
-            tableClient.createEntity(entity);
+            tableServiceClient.getTableClient(TABLE_RELATORIOS).createEntity(entity);
             LOG.infof("Relatório salvo com sucesso: %s", relatorio.getId());
+
         } catch (Exception e) {
             LOG.errorf("Erro ao salvar relatório: %s", e.getMessage());
-            throw new RuntimeException("Erro ao salvar relatório", e);
+            throw new SalvarRelatorioException("Erro ao salvar relatório", e);
+        }
+    }
+
+    private TableEntity criarEntityBase(RelatorioSemanal relatorio) {
+        String dataGeracao = relatorio.getDataGeracao() != null
+                ? relatorio.getDataGeracao().toString()
+                : LocalDateTime.now().toString();
+
+        String periodoInicio = relatorio.getPeriodoInicio() != null
+                ? relatorio.getPeriodoInicio().toString()
+                : "";
+
+        String periodoFim = relatorio.getPeriodoFim() != null
+                ? relatorio.getPeriodoFim().toString()
+                : "";
+
+        return new TableEntity(PARTITION_KEY_RELATORIOS, relatorio.getId())
+                .addProperty("dataGeracao", dataGeracao)
+                .addProperty("periodoInicio", periodoInicio)
+                .addProperty("periodoFim", periodoFim)
+                .addProperty("totalAvaliacoes", relatorio.getTotalAvaliacoes())
+                .addProperty("mediaNotas", relatorio.getMediaNotas())
+                .addProperty("notaMaisAlta", Objects.requireNonNullElse(relatorio.getNotaMaisAlta(), 0))
+                .addProperty("notaMaisBaixa", Objects.requireNonNullElse(relatorio.getNotaMaisBaixa(), 0));
+    }
+
+    private void adicionarAvaliacoesPorDia(TableEntity entity,
+                                           Map<String, Long> avaliacoesPorDia) {
+        if (avaliacoesPorDia == null) return;
+
+        String json = serializarMapaParaJson(
+                avaliacoesPorDia,
+                dia -> dia,
+                String::valueOf
+        );
+
+        entity.addProperty("avaliacoesPorDia", json);
+    }
+
+    private void adicionarContagemPorUrgencia(TableEntity entity,
+                                              Map<String, Long> contagemPorUrgencia) {
+        if (contagemPorUrgencia == null) return;
+
+        contagemPorUrgencia.forEach((nivel, count) ->
+                entity.addProperty("contagem_" + nivel, count));
+    }
+
+    private void adicionarMapaComoJson(TableEntity entity, String propriedade, Map<String, Long> mapa) {
+        if (mapa == null || mapa.isEmpty()) return;
+
+        String json = serializarMapaParaJson(
+                mapa,
+                chave -> sanitizarParaJson(Objects.requireNonNullElse(chave, "")),
+                valor -> String.valueOf(Objects.requireNonNullElse(valor, 0L))
+        );
+
+        entity.addProperty(propriedade, json);
+    }
+
+    private <K, V> String serializarMapaParaJson(
+            Map<K, V> mapa,
+            Function<K, String> serializarChave,
+            Function<V, String> serializarValor) {
+
+        String conteudo = mapa.entrySet().stream()
+                .map(entry -> String.format(FORMAT_STRING,
+                        serializarChave.apply(entry.getKey()),
+                        serializarValor.apply(entry.getValue())))
+                .collect(Collectors.joining(","));
+
+        return "{" + conteudo + "}";
+    }
+
+    private String sanitizarParaJson(String valor) {
+        return valor.replace("\"", "\\\"");
+    }
+
+    private void criarTabelaRelatorios() {
+        try {
+            tableServiceClient.createTableIfNotExists(TABLE_RELATORIOS);
+        } catch (Exception e) {
+            LOG.warnf("Tabela %s pode já existir ou erro ao criar: %s", TABLE_RELATORIOS, e.getMessage());
         }
     }
 
@@ -201,8 +237,5 @@ public class StorageTableRepository {
                 .urgencia(urgencia)
                 .dataHora(dataHora)
                 .build();
-    }
-
-    public void close() {
     }
 }
